# Movie-Rec

./: README.md
EC2/data_processing/: process_crew_data.py  process_name_basics.py  process_title_akas.py  process_title_basics.py  process_title_ratings.py  utilities.py
Lambda/: lambda_function.py
backend/: Dockerfile  delete_redis_key.py  docker-entrypoint.sh  pyproject.toml
backend/backend/Models/: Data_models.py
backend/backend/app/: main.py  utilities.py
database/: init.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/ParentComponent/: ParentComponent.js  ParentComponent.styles.js
frontend/src/components/ResultComponent/: ResultComponent.css  ResultComponent.js  ResultComponent.styles.js
frontend/src/components/SearchComponent/: LoadingSpinner.js  LoadingSpinner.styles.js  SearchComponent.js  SearchComponent.styles.js
