[tool.poetry]
name = "backend"
version = "0.1.0"
description = "A movie recomendation system"
authors = ["Abhijith <abhijithbhuvan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.1"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
gunicorn = "^21.2.0"
requests = "^2.31.0"
pandas = "^2.1.4"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
